--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -175,6 +175,15 @@ table {
     padding: 40px;
 }
 
+.flex-container-parcours {
+    display: flex;
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+    justify-content: center;
+    padding: 10px;
+}
+
 .column {
     flex-direction: column;
 }
@@ -228,6 +237,13 @@ table {
     padding: 80px 0 10px;
 }
 
+.flex-parcours:hover,
+.flex-projet:hover,
+.savoir-faire:hover,
+.savoir-etre:hover {
+    transition: transform 0.3s ease, box-shadow 0.3s ease; /* Animation au survol */
+    transform: translateY(-6px); /* Animation au survol */
+}
 
 body {
     background-color: #FFF2D7;
