--- a/src/assets/styles/Navbar.css
+++ b/src/assets/styles/Navbar.css
@@ -7,7 +7,6 @@
     width: 100%;
     margin: 0 auto;
     z-index: 1000;
-    padding: 10px 0;
 }
 
 #main-header p {
@@ -29,27 +28,17 @@
     color: black;
     background-color: #007A56;
     border-radius: 20px;
-    margin-bottom: -10px;
+    margin-bottom: -8px;
 }
 
 .flex-menu {
     display: flex;
-    align-items: center;
+    max-width: 1200px;
+    width: 100%;
     margin: 0 auto;
-}
-
-#main-nav ul {
-    display: flex;
-    justify-content: center;
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-.contact-info {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end; /* Aligne les éléments à droite */
+    align-items: center;
+    padding: 10px;
+    margin-bottom: -5px;
 }
 
 .num, .mail {
@@ -60,14 +49,10 @@
     font-size: 2rem;
 }
 
-/* Si tu veux aussi ajouter un peu d'espace entre les éléments du contact */
-.contact-info > div {
-    margin-bottom: 10px;
-}
+/* ************************************************ */
+/* ANCRE MENU */
+/* ************************************************ */
 
-/***********
-ANCRE MENU
-***********/
 #a-propos {
     scroll-margin-top: 183px;
 }
