--- a/src/assets/styles/Intro.css
+++ b/src/assets/styles/Intro.css
@@ -1,9 +1,26 @@
+/* DIV parent */
+.intro-flex-container {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    align-items: center;
+    margin: 20px 40px;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+    justify-content: center;
+    padding: 40px;
+}
+
 .intro {
+    width: 60%;
     margin: 60px 0;
 }
 
 .intro-margin {
-    margin: 40px 0
+    flex-wrap: wrap;
+    margin: 40px 0;
 }
 
 .liens {
@@ -15,10 +32,45 @@
     color: #807559;
 }
 
+/* Style de l'image */
 .photo {
     object-fit: contain;
     width: 300px;
     height: 447px;
     margin-left: 10px;
     border-radius: 20px;
+}
+
+
+/**********************************************/
+/**************  MEDIA QUERIES  ***************/
+/**********************************************/
+
+@media (max-width: 768px) {
+    .intro-flex-container {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .photo {
+        width: 80%;
+        height: auto;
+        margin: 0 0 20px 0;
+    }
+
+    .intro {
+        margin: 30px 0;
+    }
+}
+
+@media (max-width: 480px) {
+    .photo {
+        width: 100%;
+        height: auto;
+    }
+
+    .intro {
+        margin: 20px 0;
+    }
 }
